# cloudsleuth

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: dr-validation.yml  terraform-ci.yml
anomaly_detector/: __init__.py  __main__.py  actions.py  baseline.py  collector.py  handler.py  narrative.py  scorer.py
container/: Dockerfile  main.py
docs/: ARCHITECTURE.md  RUNBOOK.md
docs/requirements/: PRP.md
terraform/: main.tf  outputs.tf  variables.tf
terraform/bootstrap/: main.tf
terraform/modules/accelerator/: main.tf
terraform/modules/compute/: main.tf  user_data.sh
terraform/modules/iam/: main.tf
terraform/modules/monitoring/: failover.yaml.tftpl  main.tf
terraform/modules/networking/: main.tf
