[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsleuth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["anomaly_detector*"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

